--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,9 +1,14 @@
 env:
   browser: true
   es2021: true
-extends: 'eslint:recommended'
+
+extends: 
+  'airbnb-base'
+
 parserOptions:
   ecmaVersion: 12
   sourceType: module
+
 rules: 
   no-console: 0
+  import/extensions: 0
