--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "frontend-project-lvl1",
-  "version": "0.2.0",
+  "version": "1.0.4",
   "type": "module",
   "description": "",
-  "main": "index.js",
   "bin": {
-    "brain-games": "bin/brain-games.js"
+    "brain-even": "/bin/brain-even.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/asalex04/frontend-project-lvl1.git"
   },
-  "author": "",
+  "author": "Alexander Solovyev",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/asalex04/frontend-project-lvl1/issues"
