--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "frontend-project-lvl1",
-  "version": "1.0.4",
+  "name": "frontend-project-lvl1-as",
+  "version": "1.0.5",
   "type": "module",
   "description": "",
   "bin": {
+    "brain-games": "/bin/brain-games.js",
     "brain-even": "/bin/brain-even.js"
   },
   "scripts": {
