--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "frontend-project-lvl1-as",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "type": "module",
   "description": "",
   "bin": {
     "brain-games": "/bin/brain-games.js",
-    "brain-even": "/bin/brain-even.js"
+    "brain-even": "/bin/brain-even.js",
+    "brain-calc": "/bin/brain-calc.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
