--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "brain-games": "/bin/brain-games.js",
     "brain-even": "/bin/brain-even.js",
     "brain-calc": "/bin/brain-calc.js",
-    "brain-gcd": "/bin/brain-gcd.js"
+    "brain-gcd": "/bin/brain-gcd.js",
+    "brain-progression": "/bin/brain-progression.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,7 +24,8 @@
   },
   "homepage": "https://github.com/asalex04/frontend-project-lvl1#readme",
   "dependencies": {
-    "readline-sync": "^1.4.10"
+    "readline-sync": "^1.4.10",
+    "underscore": "^1.11.0"
   },
   "devDependencies": {
     "eslint": "^7.8.1",
