--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,14 +1,16 @@
+plugins:
+  # https://github.com/babel/eslint-plugin-babel 
+  - babel
+
+# https://eslint.org/docs/user-guide/configuring#specifying-environments
 env:
-  browser: true
-  es2021: true
+  node: true
+  
+# https://github.com/babel/babel-eslint
+parser: babel-eslint
+  
+extends:
+ - 'airbnb-base'
 
-extends: 
-  'airbnb-base'
-
-parserOptions:
-  ecmaVersion: 12
-  sourceType: module
-
-rules: 
+rules:
   no-console: 0
-  import/extensions: 0
