--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,16 +1,16 @@
-plugins:
-  # https://github.com/babel/eslint-plugin-babel 
-  - babel
-
-# https://eslint.org/docs/user-guide/configuring#specifying-environments
-env:
-  node: true
+---
+  # https://eslint.org/docs/user-guide/configuring#specifying-environments
+  env:
+    node: true
+    es2020: true
   
-# https://github.com/babel/babel-eslint
-parser: babel-eslint
+  extends:
+    - 'airbnb-base'
   
-extends:
- - 'airbnb-base'
-
-rules:
-  no-console: 0
+  parserOptions:
+    ecmaVersion: 12
+    sourceType: module
+  
+  rules:
+    no-console: 0
+    import/extensions: 0 
