--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.8",
   "type": "module",
   "description": "",
+  "main": "index.js",
   "bin": {
     "brain-games": "/bin/brain-games.js",
     "brain-even": "/bin/brain-even.js",
